# Warehouse_Management_Client

./: .gitignore  CMakeLists.txt  Main.qml  images.qrc  main.cpp
client/: OAICustomer.cpp  OAICustomer.h  OAICustomerCreate.cpp  OAICustomerCreate.h  OAICustomerUpdate.cpp  OAICustomerUpdate.h  OAICustomersApi.cpp  OAICustomersApi.h  OAIDemandForecast.cpp  OAIDemandForecast.h  OAIDemandForecastCreate.cpp  OAIDemandForecastCreate.h  OAIDemandForecastUpdate.cpp  OAIDemandForecastUpdate.h  OAIDocument.cpp  OAIDocument.h  OAIDocumentCreate.cpp  OAIDocumentCreate.h  OAIDocumentItem.cpp  OAIDocumentItem.h  OAIDocumentItemCreate.cpp  OAIDocumentItemCreate.h  OAIDocumentItemUpdate.cpp  OAIDocumentItemUpdate.h  OAIDocumentStatus.cpp  OAIDocumentStatus.h  OAIDocumentStatusCreate.cpp  OAIDocumentStatusCreate.h  OAIDocumentStatusUpdate.cpp  OAIDocumentStatusUpdate.h  OAIDocumentType.cpp  OAIDocumentType.h  OAIDocumentTypeCreate.cpp  OAIDocumentTypeCreate.h  OAIDocumentTypeUpdate.cpp  OAIDocumentTypeUpdate.h  OAIDocumentUpdate.cpp  OAIDocumentUpdate.h  OAIDocumentsApi.cpp  OAIDocumentsApi.h  (+126 more)
components/: Header.qml  HeaderButton.qml  HelpPopup.qml  Logo.qml  NotificationPopup.qml
pages/: CounterpartiesPage.qml  DocumentTypesPage.qml  DocumentsPage.qml  ForecastingPage.qml  ForgotPasswordPage.qml  HelpPage.qml  IndicatorsPage.qml  LoginPage.qml  MainPage.qml  MoneyPage.qml  NotificationsPage.qml  ProductsPage.qml  ProfilePage.qml  PurchasesPage.qml  RegistrationPage.qml  SalesPage.qml  WarehouseDetailsPage.qml  WarehousesPage.qml
